--- a/css/index.css
+++ b/css/index.css
@@ -43,8 +43,8 @@ li {
 .introduction {
     background-color: beige;
     flex-direction: column;
-    padding-bottom: 24px;
-    padding-top: 96px;
+    padding-bottom: 64px;
+    padding-top: 64px;
 }
 
 .introduction * {
@@ -55,6 +55,7 @@ li {
 .introduction img {
     max-width: 25%;
     max-height: auto;
+    margin-bottom: 32px;
 }
 
 /* Social Links */
