--- a/css/index.css
+++ b/css/index.css
@@ -99,10 +99,15 @@ a {
     flex-direction: row;
 }
 
+.support h1 {
+    margin-top: 0;
+}
+
 .support .support-links button {
     width: 20vh;
     text-align: center;
 
+    border: black solid;
     border-radius: 8px;
     box-shadow: 4px 4px black;
     transition: 0.5s;
@@ -120,6 +125,16 @@ a {
     background-color: #AFDCFF;
 }
 
+/* footer */
+.footer {
+    background-color: #B1FF84;
+}
+
+.footer div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 /* Media Query for Phone - Coming Soon */
 /* @media screen and (max-width: 768px) {
