--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -88,7 +88,7 @@ a {
     background-color: #F0FFAD;
 }
 
-.support div {
+.support .content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -119,6 +119,7 @@ a {
 
 .support .support-links .trakteer {
     background-color: #FFBAC2;
+    margin-right: 24px;
 }
 
 .support .support-links .paypal {
@@ -130,7 +131,7 @@ a {
     background-color: #B1FF84;
 }
 
-.footer div {
+.footer .content {
     display: flex;
     flex-direction: column;
     align-items: center;
