--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,7 +20,7 @@ h1 {
     font-size: 48px;
 }
 
-section {
+section:not(.sidebar) {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,28 +44,53 @@ a {
 }
 
 /* HEADER! */
-header, .links {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    align-content: center;
-    background-color: beige;
-    position: sticky;
-    top: 0
+header {
+    padding: 12px 24px;
+    align-items: flex-end;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
+
+    mix-blend-mode: difference;
 }
 
-header a {
-    margin: auto 12px;
-    font-weight: 500;
+header * {
+    color: white;
+    font-size: 32px;
 }
 
 /* Content Divisions for Each Section */
 .content {
     width: 80%;
     max-height: max-content;
+}
+
+/* SIDEBAR */
+.sidebar {
+    display: none;
+    flex-direction: column;
+    align-items: flex-end;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    z-index: 2;
+    padding: 24px 24px 0px 96px;
+
+    background-color: rgba(0, 0, 0, 0.75);
+    backdrop-filter: blur(12px);
+    font-size: 24px;
+
+    border-left: 12px beige solid;
+}
+
+.sidebar a {
+    margin-bottom: 12px;
+    
+    color: white;
+    text-align: right;
 }
 
 /* Introduction */
@@ -79,11 +104,11 @@ header a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 12px
 }
 
 .introduction * {
-    margin-bottom: 0px;
-    margin-top: 12px;
+    margin: 0px 0px;
     color: white;
     text-align: center;
 }
@@ -104,12 +129,11 @@ header a {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
+    gap: 12px 24px
 }
 
 .sociallink * {
-    margin-right: 24px;
-    margin-top: 12px;
-    margin-bottom: 12px;
     font-size: 32px;
     color: black;
 }
@@ -176,6 +200,10 @@ header a {
     background-color: #AFDCFF;
 }
 
+.support .support-links .ether {
+    background-color: #DEBAFF;
+}
+
 /* footer */
 footer {
     background-color: #B1FF84;
@@ -186,13 +214,4 @@ footer .content {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-footer .sociallink {
-    justify-content: center;
-}
-
-footer .sociallink * {
-    margin-left: 12px;
-    margin-right: 12px;
 }
